welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:27: error: not found: value c
	if (c == couleur ) {
            ^