welcome.lessons.welcome.methods.slug.SlugSnail.scala.code

def hunt(c:Color) { 
	var c:Color = getCouleurSol()   
    while (!estSurBiscuit) {
    		if (isFacingTrail() == true) {
	    		avance()
	    		baisseBrosse()
	    		leveBrosse()
	    	}else{
    			droite()}
    	
    	}
    	prendBiscuit()
    	}
    


def isFacingTrail():Boolean = {
    
    var couleur:Color = Color.gray
	if (!estFaceMur()) {
		avance()
		couleur = getCouleurSol()
		recule()
	}
	if (c == couleur ) {
		return true
	}else{
		return false
	}
}
